@@ -12,7 +12,8 @@ Version 11
 --Fixed delay and excess cpu/memory usage when entering high-level power-up 
   tokens (thanks Jimmy Andrews).
 
-
+--Changed to only decay the weakest power in the set (encourages picking up new
+  powers to protect a big power that you have built up).
 
 
 
